fixes misalignment of title

--- a/app/assets/stylesheets/customOverrides/search_result.scss
+++ b/app/assets/stylesheets/customOverrides/search_result.scss
@@ -322,29 +322,29 @@ BOOKMARK STYLING
 
 // List item search results bookmark styling
 .index_title.document-title-heading.title_tesim {
-  display: flex;
-}
-
-.index-document-functions { 
-  padding-left: 175px;
+  display: grid;
+  padding-left: 0px;
 }
 
 .bookmark-toggle {
   font-size: 17px;
 }
 
-@media screen and (max-width: 1650px) {
+@media screen and (min-width: $small_device) {
+  .index_title.document-title-heading.title_tesim {
+    display: flex;
+  }
+  .index-document-functions {
+    padding-left: 10px;
+  }
+}
+@media screen and (min-width: $medium_device) {
+  .index-document-functions {
+    padding-left: 45px;
+  }
+}
+@media screen and (min-width: $large_device) {
   .index-document-functions {
     padding-left: 90px;
-  }
-}
-@media screen and (max-width: 1530px) {
-  .index-document-functions {
-    padding-left: 0px;
-  }
-}
-@media screen and (max-width: 1380px) {
-  .index-document-functions {
-    margin-left: -105px;
   }
 }
